--- a/templates/scaffolding.html
+++ b/templates/scaffolding.html
@@ -32,6 +32,7 @@
 				</div>
 			</div>
 		</div>
+		{% if perms.wagers.delete_wager %}
 		<div id="tourneyResetModal" class="modal hide fade">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -48,6 +49,7 @@
 				</form>
 			</div>
 		</div>
+		{% endif %}
 		<div class="row">
 			<div class="offset2 span8">
 				{% for message in messages %}
