Props column had been removed.

--- a/templates/wagers/wager_list.html
+++ b/templates/wagers/wager_list.html
@@ -9,7 +9,7 @@
 
 <ul>
 {% for wager in wager_list %}
-	<li class="inline"><a href="/wagers/wagers?id={{wager.id}}"><h2>{{wager.proposition}}</h2></a>
+	<li class="inline"><a href="/wagers/wagers?id={{wager.id}}"><h2>{{wager.team_a}} vs {{wager.team_b}}</h2></a>
 	{% if perms.wager.change_wager %}<form class="inline form-inline" action="/wagers/wagers/delete/" method="POST">{% csrf_token %}<input type="hidden" value="{{wager.id}}" name="id"><input class="btn btn-danger" type="submit" value="Delete Prop"></form>
 	{% endif %}
 	</li>
