--- a/templates/wagers/wager.html
+++ b/templates/wagers/wager.html
@@ -4,10 +4,17 @@
 
 <form class="form-horizontal" action="" method="POST">{% csrf_token %}
 	<legend>Place a bet on the prop</legend>
-	{% if form.errors and not form.errors.amount_bet %}
+	{% if form.errors and not form.errors.amount_bet and not form.errors.on_prop %}
 	<div class="control-group error">
 		<div class="controls">
-		<span class="help-block">You may only make one bet per proposition.</span>
+      <span class="help-block">You may only make one bet per proposition.</span>
+		</div>
+	</div>
+	{% endif %}
+  {% if form.errors.on_prop %}
+	<div class="control-group error">
+		<div class="controls">
+      <span class="help-block">{{form.errors.on_prop.0}}</span>
 		</div>
 	</div>
 	{% endif %}
