--- a/templates/wagers/wager.html
+++ b/templates/wagers/wager.html
@@ -56,7 +56,7 @@
 	<label class="checkbox">
 		<input type="checkbox" name="position"> Winning Position
 	</label>
-	<br><input class="btn btn-success" type="submit" value="Close Wager">
+	<br><input class="btn btn-success" type="submit" value="Payout Wager">
 </form>
 {% endif %}
 {% endblock content %}
