Fixed a bug that was preventing props from being open upon creation.

--- a/templates/wagers/wager_form.html
+++ b/templates/wagers/wager_form.html
@@ -11,6 +11,7 @@
   <div class="controls">{{form.team_a}}</div>
   <label class="control-label">Team or Side B</label>
   <div class="controls">{{form.team_b}}</div>
+  {{ form.is_open.as_hidden }}
 </div>
 <br><input class="btn btn-success" type="submit" value="Create Wager" />
 </form>
