--- a/templates/wagers/wager_form.html
+++ b/templates/wagers/wager_form.html
@@ -12,6 +12,8 @@
   <label class="control-label">Team or Side B</label>
   <div class="controls">{{form.team_b}}</div>
   {{ form.is_open.as_hidden }}
+  <label class="control-label">Note</label>
+  <div class="controls">{{form.notes}}</div>
 </div>
 <br><input class="btn btn-success" type="submit" value="Create Wager" />
 </form>
