Added some template code for tourney and login views.

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,7 @@
 {% extends "scaffolding.html" %}
 {% block content %}
-<form action="" method="post">{% csrf_token %}
+<form action="{% url 'login' %}" method="post">
+{% csrf_token %}
 {{form}}
 <input name="next" type="hidden" value="/">
 <br>
