Updated site CSS.

--- a/templates/scaffolding.html
+++ b/templates/scaffolding.html
@@ -4,17 +4,7 @@
 		<title>Easy Props</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="/site_media/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <style type="text/css">
-    .marketing {
-      text-align: center;
-    }
-    .form-reg input {
-      margin-button: 15px;
-    }
-    .form-reg .btn-reg {
-      display: block;
-    }
-    </style>
+    <link href="/site_media/css/officeprops.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
 		<div class="navbar navbar-inverse">
