Updated login and register templates to make more usable.

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,7 +1,6 @@
 {% extends "scaffolding.html" %}
 {% block content %}
-<form action="" method="POST">{% csrf_token %}
-{{form}}
-<br><input type="submit" value="Submit">
-</form>
+{% with legend="Sign Up" next="/"%}
+{% include 'registration/snippets/register_form.html' %}
+{% endwith %}
 {% endblock %}
