--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,6 @@
 {% extends "scaffolding.html" %}
 {% block content %}
-<form action="{% url 'login' %}" method="post">
-{% csrf_token %}
-{{form}}
-<input name="next" type="hidden" value="/">
-<br>
-<input type="submit" value="Submit">
-</form>
+{% with legend="Sign In" next="/"%}
+{% include 'registration/snippets/login_form.html' %}
+{% endwith %}
 {% endblock %}
