Fixed a bug with next variable not being used.

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,6 +1,6 @@
 {% extends "scaffolding.html" %}
 {% block content %}
-{% with legend="Sign Up" next="/"%}
+{% with legend="Sign Up"%}
 {% include 'registration/snippets/register_form.html' %}
 {% endwith %}
 {% endblock %}
