--- a/templates/registration/snippets/register_form.html
+++ b/templates/registration/snippets/register_form.html
@@ -26,7 +26,7 @@
         {% endfor %}
       </div>
     </div>
-    <input name="next" type="hidden" value="{{ next }}" />
+    <input name="next" type="hidden" value="{% if next %}{{ next }}{% else %}/{% endif %}" />
     <button class="btn btn-large btn-primary btn-reg" type="submit">Register</button>
   </fieldset>
 </form>
