--- a/templates/scaffolding.html
+++ b/templates/scaffolding.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Easy Props</title>
+		<title>Office Props</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="/site_media/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/site_media/css/officeprops.css" rel="stylesheet" media="screen">
