Improved usability of the tournament details page for admins.

--- a/templates/wagers/tournaments/active-list.html
+++ b/templates/wagers/tournaments/active-list.html
@@ -1,10 +1,19 @@
 {% extends "scaffolding.html" %}
 {% block content %}
+<h1>Tournaments I'm Playing In</h1>
 <ol class="unstyled">
   {% for player in players %}
     {% with tourney=player.tournament %}
       <li><a href="{{ tourney.get_absolute_url }}">{{ tourney }}</a> created by {{ tourney.created_by }} on {{ tourney.created_on }}</li>
     {% endwith %}
+  {% empty %}
+    <li>You have no active tournaments.</li>
+  {% endfor %}
+</ol>
+<h1>Tournaments I'm Running</h1>
+<ol class="unstyled">
+  {% for tourney in tournaments %}
+      <li><a href="{{ tourney.get_absolute_url }}">{{ tourney }}</a> created by {{ tourney.created_by }} on {{ tourney.created_on }}</li>
   {% empty %}
     <li>You have no active tournaments.</li>
   {% endfor %}
